# routes/employees.js
@@ -2,15 +2,21 @@
 const router = require("express").Router();
 
 
-const employeesController = require("../controllers/employees")
+const employeesController = require("../controllers/employees");
+const { validate } = require("../models/service");
+const { check, validationResult} = require("express-validator");
+const validateEmployee = [
+    check("email").isEmail().withMessage("invalid email format"),
+    check("salary").isNumeric().withMessage("Salary must be a number")
+];
 
 router.get("/", employeesController.getAllEmployees)
 
 router.get("/:id", employeesController.getSingleEmployee)
 
-router.post("/", employeesController.createEmployee)
+router.post("/",validateEmployee, employeesController.createEmployee)
 
-router.put("/:id", employeesController.updateEmployee)
+router.put("/:id",validateEmployee, employeesController.updateEmployee)
 
 router.delete("/:id", employeesController.deleteEmployee)
 
